--- a/static/css/gridpage.css
+++ b/static/css/gridpage.css
@@ -21,6 +21,11 @@
     padding: 0 30px 0 0;
     margin-bottom: 50px;
     min-height: 152px;
+  
+}
+.launch-card h2::before {
+    margin-top: 1rem !important;
+    height: 0 !important;
 }
 
 .gridPage p {
