--- a/static/css/gridpage.css
+++ b/static/css/gridpage.css
@@ -24,8 +24,8 @@
   
 }
 .launch-card h2::before {
-    margin-top: 1rem !important;
-    height: 0 !important;
+    margin-top: 1rem ;
+    height: 0 ;
 }
 
 .gridPage p {
