--- a/static/css/gridpage.css
+++ b/static/css/gridpage.css
@@ -33,6 +33,7 @@
 }
 
 .gridPage p {
+    color: rgb(255, 255, 255);
     margin-left: 0 !important;
     padding-left: 0 !important;
     font-weight: 300 !important;
